--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: php
-
 php:
-  - 5.6
   - 7.2
 
 sudo: false
@@ -10,46 +8,27 @@ services:
   - mysql
 
 env:
-  matrix:
-    - SHOPWARE_VERSION="5.2"
   global:
     - PLUGIN_NAME=FroshFasterCacheManager
-    - SHOPWARE_DIRECTORY="${HOME}/shopware"
-    - PLUGIN_DIRECTORY="${SHOPWARE_DIRECTORY}/custom/plugins"
 
 cache:
   directories:
-    - ${HOME}/.composer/cache/files
+    - "${HOME}/.composer/cache/files"
 
 install:
   - composer install
 
-before_script:
-  - mysql -e 'CREATE DATABASE shopware;'
-  - if [[ "$(php --version | grep -cim1 xdebug)" -ge 1 ]]; then phpenv config-rm xdebug.ini; fi
-  - git clone https://github.com/shopware/shopware.git ${SHOPWARE_DIRECTORY} --branch ${SHOPWARE_VERSION}
-  - ant -f ${SHOPWARE_DIRECTORY}/build/build.xml -Dapp.host=localhost -Ddb.user=travis -Ddb.host=127.0.0.1 -Ddb.name=shopware build-unit
-  - mv ${TRAVIS_BUILD_DIR} ${PLUGIN_DIRECTORY}/${PLUGIN_NAME}
-  - php ${HOME}/shopware/bin/console sw:plugin:refresh
-  - php ${HOME}/shopware/bin/console sw:plugin:install ${PLUGIN_NAME}
-  - php ${HOME}/shopware/bin/console sw:plugin:activate ${PLUGIN_NAME}
-  - cd ${PLUGIN_DIRECTORY}/${PLUGIN_NAME}
-
 script:
-  -
-
-after_success:
-  - chmod +x ./build.sh
-  - ./build.sh $TRAVIS_TAG
+  - "./build.sh $TRAVIS_TAG"
 
 stages:
-  - test
-  - name: Store-Check
-    if: tag IS blank AND env(PLUGIN_ID) IS present AND type != pull_request
-  - name: Store-Sync
-    if: branch = master AND env(PLUGIN_ID) IS present AND type != pull_request
-  - name: Store-Deploy
-    if: tag IS present
+      - test
+      - name: Store-Check
+        if: branch = master
+      - name: Store-Sync
+        if: branch = master
+      - name: Store-Deploy
+        if: tag IS present
 
 jobs:
   include:
@@ -57,25 +36,23 @@ jobs:
       php: 7.3
       before_script: skip
       install:
-        - chmod +x ./build.sh
-        - ./build.sh ${TRAVIS_BRANCH}
-        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.0/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
+        - ./build.sh master
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.1/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
       script:
         - php frosh-plugin-upload.phar plugin:validate ${TRAVIS_BUILD_DIR}/${PLUGIN_NAME}*.zip
     - stage: Store-Sync
       before_script: skip
       php: 7.3
       install:
-        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.0/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.1/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
       script:
         - php frosh-plugin-upload.phar plugin:update ${TRAVIS_BUILD_DIR}/Resources/store
     - stage: Store-Deploy
       before_script: skip
       php: 7.3
       install:
-        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.0/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
+        - wget 'https://github.com/FriendsOfShopware/FroshPluginUploader/releases/download/0.1.1/frosh-plugin-upload.phar' -O frosh-plugin-upload.phar
       script:
-        - chmod +x ./build.sh
         - ./build.sh
         - php frosh-plugin-upload.phar plugin:upload ${TRAVIS_BUILD_DIR}/${PLUGIN_NAME}*.zip
 
