--- a/plugin.xml
+++ b/plugin.xml
@@ -23,7 +23,7 @@ Beschleunigen Sie den CacheManager. Dieses Plugin ermöglicht es, den CacheManag
     </description>
 
     <changelog version="1.0.5">
-        <changes lang="de">Kompatibilität zur Shopware Version 5.6.5/changes>
+        <changes lang="de">Kompatibilität zur Shopware Version 5.6.5</changes>
         <changes>Add compatibility to shopware version 5.6.5</changes>
     </changelog>
 
